# TemplateCpp

./: .gitignore  CMakeLists.txt
includes/: placeholder.hpp
src/: main.cpp
